hard-gists/cfaad5763fb7471aed85/run.log
=== Docker Run Log for cfaad5763fb7471aed85 ===
Started at: Mi 29. Okt 20:19:26 CET 2025

[2025-10-29 20:19:27] START: Running container for cfaad5763fb7471aed85
[2025-10-29 20:19:27] SUCCESS: Container c57447d105202a97523dbae29d194c2dae09e483068005f3ac91ede1edbde0e2 started for cfaad5763fb7471aed85
=== Container logs for cfaad5763fb7471aed85 ===
  File "/snippet.py", line 19
    except SMIME.SMIME_Error, e:
           ^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for cfaad5763fb7471aed85 ===
[2025-10-29 20:19:29] INFO: Container c57447d105202a97523dbae29d194c2dae09e483068005f3ac91ede1edbde0e2 has stopped
